NXT-1206: Update node recommendation manager tests
NXT-1206 (Gateway API: Suggested nodes for successor nodes)